deployments/kubernetes/deployment.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - #ENVIRONMENT#.#URL_SUFFIX#
        - api.#ENVIRONMENT#.#URL_SUFFIX#
        - phpmyadmin.#ENVIRONMENT#.#URL_SUFFIX#
      secretName: tls-certificate
  rules:
    - host: #ENVIRONMENT#.#URL_SUFFIX#
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 3000
    - host: api.#ENVIRONMENT#.#URL_SUFFIX#
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back
                port:
                  number: 80
    - host: phpmyadmin.#ENVIRONMENT#.#URL_SUFFIX#
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "mariadb"
  labels:
    app: "mariadb"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "mariadb"
  template:
    metadata:
      labels:
        app: "mariadb"
    spec:
      containers:
        - name: "mariadb"
          image: "mariadb:10.11"
          imagePullPolicy: Always
          args:
            - --ignore-db-dir=lost+found
            - --max_allowed_packet=1024M
---
apiVersion: v1
kind: Service
metadata:
  name: "mariadb"
spec:
  selector:
    app: "mariadb"
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "phpmyadmin"
  labels:
    app: "phpmyadmin"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "phpmyadmin"
  template:
    metadata:
      labels:
        app: "phpmyadmin"
    spec:
      containers:
        - name: "phpmyadmin"
          image: "phpmyadmin/phpmyadmin:4.8"
---
apiVersion: v1
kind: Service
metadata:
  name: "phpmyadmin"
spec:
  selector:
    app: "phpmyadmin"
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "back"
  labels:
    app: "back"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "back"
  template:
    metadata:
      labels:
        app: "back"
    spec:
      containers:
        - name: "back"
          image: "#CI_REGISTRY_IMAGE#/back:#ENVIRONMENT#"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: "tcmregistry"
---
apiVersion: v1
kind: Service
metadata:
  name: "back"
spec:
  selector:
    app: "back"
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "front"
  labels:
    app: "front"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "front"
  template:
    metadata:
      labels:
        app: "front"
    spec:
      containers:
        - name: "front"
          image: "#CI_REGISTRY_IMAGE#/front:#ENVIRONMENT#"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: "tcmregistry"
---
apiVersion: v1
kind: Service
metadata:
  name: "front"
spec:
  selector:
    app: "front"
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
